fixed alignment issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -95,27 +95,27 @@ span{
 
 @media screen and (min-width: 768px) {
     .foot-text {
-        font-size: 300%;
+        font-size: 200%;
         color: black;
         /* position: static; */
         margin-bottom: 1vw;
         font-family: Arial, Helvetica, sans-serif;
         font-weight: bolder;
         line-height: 30px;
-        transform: translate(0, -50%);
+        transform: translate(-25%, -75%);
     }
 }
 
 @media screen and (max-width: 767px) {
     .foot-text {
-        font-size: 300%;
+        font-size: 200%;
         color: black;
         /* position: static; */
-        margin-top: 1vw;
+        margin: auto;
         font-family: Arial, Helvetica, sans-serif;
         font-weight: bolder;
         line-height: 30px;
-        transform: translate(0, -200%);
+        transform: translate(0%, 0%);
     }
 }
 
@@ -152,13 +152,14 @@ body{
 }
 
 .footer-div{
-    position: fixed;
+    display: block;
     background-color: rgba(255, 255, 255, 0);
     bottom: 0px;
+    padding-top: 5%
 }
 
 .page-content{
-    height: 80%;
+    height: 75%;
     margin-top: 2px;
     margin-bottom: 2px;
     margin-left: 1%;
@@ -225,7 +226,7 @@ body{
 }
 
 #listContainer{
-    height: 75%;
+    height: 85%;
     overflow-y: scroll;
 }
 
@@ -355,7 +356,8 @@ clear: both;
 * {box-sizing: border-box;}
 
 body {
-font: 16px Arial;  
+font: 16px Arial;
+overflow: hidden;
 }
 
 /* aligning the check box in the details page */
